fixed the copyright spacing

--- a/themes/perfecttheme/assets/scss/_main.scss
+++ b/themes/perfecttheme/assets/scss/_main.scss
@@ -852,6 +852,7 @@ header {
     #copyright {
         align-items: left;
         padding-top: 2rem;
+        padding-left: 0;
     }
   
     footer ul {
